--- a/ZadZal3.lpi
+++ b/ZadZal3.lpi
@@ -40,6 +40,7 @@
         <Filename Value="losowanie_sortowanie.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="Form_LosSort"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Losowanie_Sortowanie"/>
       </Unit1>
