--- a/backup/ZadZal3.lpi
+++ b/backup/ZadZal3.lpi
@@ -39,7 +39,8 @@
       <Unit1>
         <Filename Value="losowanie_sortowanie.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="Form1"/>
+        <ComponentName Value="Form_LosSort"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Losowanie_Sortowanie"/>
       </Unit1>
